--- a/index.html
+++ b/index.html
@@ -150,22 +150,22 @@
     <p> (510) 797-3474</p>
     <ul id="footer-social-list">
       <li>
-        <a href="https://www.twitter.com/" target="_blank"> 
+        <a href="https://www.twitter.com/" target="_blank" rel="noreferrer"> 
           <img src="images/social/twit.png" alt="" height="35px" width="35px">
         </a>
       </li>
       <li>
-        <a href="https://www.yelp.com/biz/anikis-sushi-fremont" target="_blank">        
+        <a href="https://www.yelp.com/biz/anikis-sushi-fremont" target="_blank" rel="noreferrer">        
           <img src="images/social/yelp.png" alt="" height="35px" width="35px">
         </a>
       </li>
       <li>
-        <a href="https://www.facebook.com/" target="_blank"> 
+        <a href="https://www.facebook.com/" target="_blank" rel="noreferrer"> 
           <img src="images/social/face.png" alt="" height="35px" width="35px">
         </a>
       </li>
       <li>        
-        <a href="https://www.instagram.com/" target="_blank"> 
+        <a href="https://www.instagram.com/" target="_blank" rel="noreferrer"> 
           <img src="images/social/insta.png" alt="" height="35px" width="35px">
         </a>
       </li>
